fix: add z-index for button in stat window

--- a/rslang/src/speakit/css/style.scss
+++ b/rslang/src/speakit/css/style.scss
@@ -255,6 +255,7 @@ $White_Light: #f3f3f3;
     margin: 0.5em auto;
     background: #fffcf9;
     margin-top: -3.5em;
+    z-index: 1;
         .btn {
             padding: 0.5em 1em;
             display: inline-block;
